api-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
            - name: envoy.file_access_log
              config:
                path: "/var/log/access.log"
          route_config:
            name: local_route
            virtual_hosts:
            - name: api_service
              domains:
              - "*.cryptowise.ai"
              routes:
              - match:
                  prefix: "/v1"
                route:
                  cluster: local_api
          http_filters:
          - name: envoy.router
            typed_config: {}
      # tls_context:
      #   common_tls_context:
      #     tls_certificates:
      #       - certificate_chain:
      #           filename: "/etc/platform-web.ai.pem"
      #         private_key:
      #           filename: "/etc/platform-web.ai.key"
  clusters:
  - name: local_api
    connect_timeout: 10s
    type: strict_dns
    lb_policy: round_robin
    # http2_protocol_options: {}
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 443
    tls_context:
      common_tls_context:
        tls_certificates:
          certificate_chain: { "filename": "/etc/platform-web.ai.pem" }
          private_key: { "filename": "/etc/platform-web.ai.key" }
        # validation_context:
        #   trusted_ca:
        #     filename: /etc/ssl/certs/ca-certificates.crt

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
