umbrella-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: umbrella_route
            virtual_hosts:
            - name: umbrella
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/v1"
                route:
                  cluster: umbrella
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: umbrella
    connect_timeout: 3s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8080
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
